[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools_scm>=6.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "station_etl_tools"
version = "0.0.1"
authors = [
    { name = "Alisson Pinto", email = "alisson.pinto@clevertech.biz" },
    { name = "Kiran Morrison", email = "kiran@arbol.io" }
]
keywords = ['Climate', 'ETL', 'IPFS']
dynamic = ['readme', 'description']

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Atmospheric Science"
]

[tool.setuptools]
packages=['station_etl_tools', 'station_etl_tools.utils']

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "station_etl_tools/_version.py"

[project.urls]
Homepage = "https://arbol.io/"

# CHECK THIS LATERstation_etl_to

#[project.urls]
#"Homepage" = "https://github.com/Arbol-Project/station-climate-etl-ipfs"
#"Bug Tracker" = "https://github.com/Arbol-Project/station-climate-etl-ipfs/issues"