[build-system]
requires = [
    "setuptools>=61.2",
    "wheel",
    "setuptools_scm>=6.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "nettle"

# Where is version coming from?
#dynamic = ['version']
version = "0.4.4"

requires-python = ">3.10"
authors = [
    { name = "Alisson Pinto", email = "alisson.pinto@clevertech.biz" },
    { name = "Kiran Morrison", email = "kiran@arbol.io" }
]
keywords = ['Climate', 'ETL', 'IPFS', 'S3']
description = "Tools for writing climate data etls using S3 or IPFS as a backing store"

# The contents of the README file(s) are used to populate the Description field of your distribution’s metadata
# (similar to long_description in setuptools). When multiple files are specified they are concatenated with newlines.
# https://python-poetry.org/docs/pyproject/#readme
# long-description = 'A set of utilities for building ETLs of 2D data. Designed with climate data in mind, typically station based, and with storage on both s3 and IPFS available.'
readme = "README.md"

# Obsolete - only relevant for pkg_resources, easy_install and setup.py install in the context of eggs (deprecated).
# Was giving error: configuration error: `project` must not contain {'zip-safe'} properties
#zip-safe = true

# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
# include-package-data = true

dependencies = [
    "geopandas",
    "numpy",
    "pandas",
    "pyarrow",
    "python-dotenv",
    "python-dateutil",
    "urllib3",
    "dag_cbor",
    "s3fs",
    "shapely",
    "cerberus",
    "coverage",
    "astropy"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Atmospheric Science"
]

#[tool.setuptools]
#packages=['nettle', 'nettle.utils', 'nettle.errors', 'nettle.io', 'nettle.metadata', 'nettle.dataframe']

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "nettle/_version.py"

[project.urls]
"Homepage" = "https://arbol.io/"
"Bug Tracker" = "https://github.com/Arbol-Project/nettle/issues"

[tool.setuptools.package-data]
"*" = ["*.txt"]

[tool.setuptools.packages.find]
exclude = ["docs*", "examples*"]
