[metadata]
name = station_etl_tools
version = 0.0.1
author = Alisson Pinto
description = Tools for transforming ... FILL THIS LATER
long_description = A set of utilities for building ETLs of climate data that place the results in IPFS data stores CHECK THIS LATER

[options]
zip_safe = True
include_package_data = True
install_requires =
    geopandas==0.9.0
    pandas==1.3.1
    python-dotenv==0.17.1
    ipfshttpclient==0.8.0a2
    python-dateutil==2.8.1
    urllib3==1.25.9
    build==0.10.0
    packaging==23.1
    pyproject-hooks==1.0.0
    tomli==2.0.1

[options.package_data]
etls = conf/*.json, static/data_dictionaries/*.json, static/station_info/*.json, *.txt

[options.packages.find]
exclude = ["docs*", "tests*"]

# CHECK THIS LATER

;[options.extras_require]
;testing =
;    pytest
;    pytest-mock
;dev =
;    flake8
;    black

;[flake8]
;ignore = E123, E251, E266, W503
;max-line-length = 200
;
;[options.package_data]
;* = py.typed, *.json
;
