[metadata]
name = station_etl_tools
version = 0.0.4
author = Alisson Pinto
description = Tools for writing climate data etls using S3 or IPFS as a backing store
long_description = A set of utilities for building ETLs of 2D data. Designed with climate data in mind, typically station based, and with storage on both s3 and IPFS available.

[options]
zip_safe = True
include_package_data = True
python_requires = >=3.10
install_requires =
    geopandas
    numpy
    pandas
    pyarrow
    python-dotenv
    python-dateutil
    urllib3
    dag_cbor
    s3fs
    shapely
    cerberus

[options.package_data]
etls = conf/*.json, static/data_dictionaries/*.json, static/station_info/*.json, *.txt

[options.packages.find]
exclude = ["docs*", "tests*", "examples"]


# ROAD MAP
# Enforce flake8 for consistency with gridded tools

;[options.extras_require]
;testing =
;    pytest
;    pytest-mock
;dev =
;    flake8
;    black

;[flake8]
;ignore = E123, E251, E266, W503
;max-line-length = 200
;
;[options.package_data]
;* = py.typed, *.json
;
